examples/test/testpolicy8795.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8795
  namespace: namespace470
spec:
  podSelector:
    matchLabels:
      key36: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value21
          key14: value7
          key47: value12
      podSelector:
        matchLabels:
          key28: value14
          key39: value18
